# oki

./: .gitignore  CMakeLists.txt  license  readme
include/: readme
include/ostr/: ostr.h  readme
src/: readme
src/ostr/: ostr.c
